src/layout/assets/css/navbar.css
/* 
** The Header Media Queries **
** Tweak as per your needs **
*/
.brand {
    font-weight: bold;
    font-size: 20px; 
    color: white;
    text-decoration: none;
}
  
.site-header {
    position: relative;
    background-color: black; 
    border-bottom: #242424 2px solid;
}

.site-header__wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    height: 10vmin;
}

.site-header__start {
    display: flex;
    align-items: center; 
}
.site-header__start > * + * {
    margin-left: 9vmin; 
}

.site-header__end {
    color: #ffffff;
    margin-right: 5vmin;
    background-color: #1d1d1d;
    padding: 0%;
    border-radius: 100px;
    padding-left: 4%;
    padding-right: 4%;
} 

.site-header__end h1 {
    font-size: 1rem;
} 

@media (max-width: 679px) {
    .site-header__end {
        display: none;
    } 

    .site-header__wrapper {
        padding: 5%;
    }
}

.nav__wrapper {
    position: fixed;
    top: 8%;
    left: 0;
    width: Max(220px, 20%);
    bottom: 0;
    z-index: 1;
    visibility: hidden;
    opacity: 0;
    transform: translateX(-100%);
    background-color: #000000;
    transition: transform 0.3s ease-out, opacity 0.3s ease-out;
    display: block; 
}

.nav__wrapper.active {
    visibility: visible;
    opacity: 1;
    transform: translateX(0); 
}
@media (max-width: 679px) {
    .nav__wrapper {
        top: 8%;
        /* Use a CSS variable and get JS help */ 
    } 
}
.nav__item {
    border-bottom: 1px solid rgba(0, 0, 0, 0.2); 
}
.nav__item a {
    display: block;
    padding: 1.5rem 2rem; 
    text-decoration: none;
    color: white;
}

.sub-nav {
    display: flex;
    flex-wrap: wrap; 
    list-style-type: none;
}
.sub-nav li:not(:last-child) {
    margin-right: 1.5rem;
}

.sub-nav li a {
    text-decoration: none;
}

@media (max-width: 679px) {
    .sub-nav {
        background: rgba(0, 0, 0, 0.1);
        margin: 0 -1rem -1rem;
        padding: 1rem; 
    } 
}

.search {
    margin-left: 30%;
    display: flex; 
}

.search__toggle {
    appearance: none;
    order: 1;
    font-size: 0;
    width: 34px;
    height: 34px;
    background: url("../img/header-3/search.svg") center/22px no-repeat;
    border: 0; 
}
@media (max-width: 679px) {
    .search__toggle {
        position: absolute;
        right: 5vmin;
        top: 30%; 
    } 
}
.search__toggle.active {
    background: url("../img/header-5/close.svg") center/22px no-repeat; 
}
@media (min-width: 680px) {
    .search__toggle {
        display: none; 
    } 
}
.search__form {
    display: none; 
}
.search__form.active {
    display: block; 
}
@media (min-width: 680px) {
    .search__form {
        display: block; 
    } 
}
@media (max-width: 679px) {
    .search__form {
        position: absolute;
        left: 0;
        right: 0;
        top: 100%;
        background-color: red; 
    }
    .search__form input {
        width: 100%; 
    } 
}
.search__form input {
    min-width: 200px;
    appearance: none;
    border: 0;
    background-color: #fff;
    border-radius: 20px;
    font-size: 0.8rem;
    padding: 6%; 
}
@media (max-width: 679px) {
.search__form input {
        border-bottom: 1px solid #979797; 
    } 
}

.utama {
    width: 100%;
    display: flex;
}

.main_page {
    background-color: #1e1e1e;
    min-height: 87vmin;
    width: 100%;
}

@media (min-width: 680px) {
    .show-button-navbar {
        display: none;
    }
}

@media (max-width: 679px) {
    .show-sidebar {
        display: none;
    }
}

.sidebar {
    margin-right: 6vmin;
    list-style-type: none;
}

.nav {
    background-color: #000000;
}

@font-face {
	font-family: "FA";
	font-style: normal;
	font-weight: 900;
	font-display: block;
	src: url(http://localhost:3000/layout/assets/font/fa-solid-900.eot);
	src: url(http://localhost:3000/layout/assets/font/fa-solid-900.woff2) format("woff2"), url(http://localhost:3000/layout/assets/font/fa-solid-900.woff) format("woff"), url(http://localhost:3000/layout/assets/font/fa-solid-900.ttf) format("truetype");
}

.nav__toggle {
    appearance: none;
    border: 0;
    background: url("../img/burger.svg") center/22px no-repeat;
}

